[workspace]
resolver = "2"
members = [
    "core",
    "desktop/src-tauri",
    "core/fuzz",
]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[workspace.package]
version = "0.2.2"
edition = "2021"
authors = [ "Johan Novak <johan@impossiblereality.dev>" ]
license = "MIT"
repository = "https://github.com/ImpossibleReality/Siffra"