[package]
name = "siffra"
readme = "README.md"
keywords = ["siffra", "calculator", "math", "units", "dimensions"]
categories = ["mathematics"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pest = { version = "2.7" }
pest_derive = { version="2.7.5", features = ["grammar-extras"] }
periodic-table-on-an-enum = "0.3.2"
astro-float = { version = "0.9.3", default-features = false, features = ["std"] }