[package]
name = "siffra-desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["Impossible Reality"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-set-always-on-top", "window-start-dragging", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
pest = { version = "2.7" }
pest_derive = { version="2.7.5", features = ["grammar-extras"] }
periodic-table-on-an-enum = "0.3.2"
astro-float = { version = "0.9.2", default-features = false, features = ["std"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
